[package]
name = "bevy_background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
nokhwa = { version = "0.9.4", features = [ "input-gst" ] }
crossbeam-channel = "0.5.2"
image  = { version = "0.23.14", default-features = false, features = [ "png", "jpeg" ] }
futures-lite = "1.11.3"
bytemuck = { version = "1.7.0", features = ["derive"] }
wgpu = "0.12.0"